@@ -22,6 +22,16 @@ AUTHOR: mat@FreeBSD.org
 
   WANT_BDB_VER=XX should be replaced by USES=bdb:XX.
 
+20160512:
+AUTHOR: emaste@FreeBSD.org
+
+  "make makesum" now writes the current timestamp to distinfo when it is run.
+  This is done to support development and prototyping efforts for reproducible
+  package builds, which require some concept of a "last updated" time.
+
+  The TIMESTAMP can currently be ignored for ports that have no distinfo, and
+  for updates done without using "make makesum."
+
 20160414:
 AUTHOR: mat@FreeBSD.org
 
